<resources>
    <string name="app_name">Kaliatra</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analisis</string>
    <string name="camera">Kamera</string>
    <string name="preview_image">Gambar Pratinjau</string>
    <string name="history">Riwayat</string>
    <string name="lewati">Lewati</string>
    <string name="title_text_onboarding_1">Selamat Datang di Kaliatra</string>
    <string name="description_text_onboarding_1">Jelajahi dan terjemahkan aksara Bali dengan mudah menggunakan teknologi Machine Learning. Ubah aksara Bali menjadi teks yang lebih mudah dipahami, baik melalui kamera perangkat atau dengan menggambar aksara untuk diidentifikasi.</string>
    <string name="button_brush">Brush</string>
    <string name="button_onboarding_next">Next</string>
    <string name="button_eraser">Eraser</string>
    <string name="button_clear">Clear</string>
    <string name="title_text_onboarding_2">Gambar Aksara Bali</string>
    <string name="description_text_onboarding_2">Fitur ini memungkinkan Anda mengenali dan menerjemahkan aksara Bali dengan cepat. Cukup gambar aksara, dan hasilnya langsung muncul. Antarmuka yang sederhana akan membuat proses analisis efisien dan nyaman.</string>
    <string name="title_text_onboarding_3">Terjemahkan Aksara Bali</string>
    <string name="description_text_onboarding_3">Mengubah aksara Bali menjadi bentuk yang lebih mudah dibaca dan dimengerti. Gunakan fitur terjemahan instan kami untuk mengubah aksara Bali ke bahasa Indonesia dengan hasil yang akurat dan cepat.</string>
    <string name="title_text_Login">Masuk!</string>
    <string name="description_text_login">Aplikasi Kaliatra mewajibkan kamu untuk masuk menggunakan email google</string>
    <string name="agreement_text"><![CDATA[Dengan melakukan login maka kamu telah\nsetuju dengan Privacy Policy & Terms of Service]]></string>
    <string name="login">Tekan di sini untuk Login</string>
    <string name="analisis">Analisis</string>
    <string name="title_text_home">Gambarlah Aksara Bali</string>
    <string name="description_text_home">Gambarkan aksara Bali yang ingin diterjemahkan di bawah ini</string>
    <string name="home_title">Beranda</string>
    <string name="scan_title">Pindai</string>
    <string name="dictionary_title">Kamus</string>
    <string name="profile_title">Akun</string>
    <string name="title_home">Beranda</string>
    <string name="no_drawing_found">Harap gambar terlebih dahulu</string>
    <string name="no_prediction_found">Tidak ada prediksi yang ditemukan.</string>
    <string name="toast_file_creation_failed">Pembuatan file gagal atau file kosong.</string>
    <string name="toast_error_uploading_file">Kesalahan saat mengunggah file</string>
    <string name="toast_token_not_found">Token tidak ditemukan atau sudah kadaluarsa. Pastikan Anda sudah login.</string>
    <string name="toast_error_message">Kesalahan: %1$s</string>
    <string name="toast_error_message_default">Terjadi kesalahan yang tidak diketahui</string>
    <string name="title_scan">Pindai</string>
    <string name="title_text_scan">Pindai Aksara Bali</string>
    <string name="description_text_scan">Gunakan kamera atau pilih gambar dari galeri untuk memindai aksara Bali yang ingin diterjemahkan</string>
    <string name="title_dictionary">Kamus</string>
    <string name="title_profile">Akun</string>
    <string name="result">Hasil Analisis</string>
    <string name="title_text_result">Hasil Analisis Aksara Bali</string>
    <string name="description_text_result">Dibawah ini merupakan hasil analisi aksara bali yang sudah kamu gambar, foto atau ambil dari galeri</string>
    <string name="dictionary_photo">Foto Kamus</string>
    <string name="search_hint">Cari Aksara Bali</string>
    <string name="profile_picture_placeholder">Foto Profil</string>
    <string name="profile_name_placeholder">Nama Pengguna</string>
    <string name="profile_email_placeholder">emailpengguna@example.com</string>
    <string name="change_language_icon">Ikon Ubah Bahasa</string>
    <string name="change_language">Bahasa Aplikasi</string>
    <string name="change_language_subtitle">Indonesia</string>
    <string name="arrow_icon">Ikon Panah</string>
    <string name="about_app_icon">Ikon Tentang Aplikasi</string>
    <string name="about_app">Tentang Aplikasi</string>
    <string name="log_out_icon">Ikon Keluar</string>
    <string name="log_out">Keluar</string>
    <string name="circle_one">Lingkaran Satu</string>
    <string name="circle_two">Lingkaran Dua</string>
    <string name="circle_three">Lingkaran Tiga</string>
    <string name="img_onboarding_1">Gambar Onboarding 1</string>
    <string name="img_onboarding_2">Gambar Onboarding 2</string>
    <string name="img_onboarding_3">Gambar Onboarding 3</string>
    <string name="eraser_active">Penghapus Aktif</string>
    <string name="pen_tool_active">Alat Pena Aktif</string>
    <string name="button_delete_description">Hapus Tombol</string>
    <string name="result_history">Hasil :</string>
    <string name="img_aksara_history">Gambar Aksara Riwayat</string>
    <string name="loading">Harap Tunggu</string>
    <string name="login_successful">Login Berhasil</string>
    <string name="login_failed">Login gagal, Silakan coba lagi</string>
    <string name="category_name">Nama Kategori</string>
    <string name="failed_to_load_data">Gagal memuat data</string>
    <string name="unknown_error">Terjadi kesalahan yang tidak diketahui</string>
    <string name="select_image_first">Harap pilih gambar terlebih dahulu</string>
    <string name="no_result_available">Tidak ada hasil yang tersedia</string>
    <string name="result_text">Prediksi: %1$s</string>
    <string name="delete_successful">Berhasil dihapus</string>
    <string name="delete_failed">Gagal menghapus</string>
    <string name="no_data_available">Tidak ada data</string>
    <string name="token_not_found">Token tidak ditemukan</string>
    <string name="history_title">Riwayat Prediksi</string>
    <string name="no_history">Tidak Ada Riwayat Prediksi</string>
    <string name="confirm_logout_title">Konfirmasi Keluar</string>
    <string name="confirm_logout_message">Apakah Anda yakin ingin keluar?</string>
    <string name="no">Tidak</string>
    <string name="yes">Iya</string>
    <string name="about_apps_title">Tentang Aplikasi</string>
    <string name="result_title">Hasil</string>
    <string name="about_apps_paragraph_1">Kaliatra adalah aplikasi scanner atau penerjemah Aksara Bali yang dibuat demi menjembatani tulisan tradisional Bali dengan teknologi modern. Dengan menggunakan teknologi Machine Learning, Cloud Computing dan dibungkus dengan Mobile Development, aplikasi Kaliatra memungkinkan pengguna melakukan penerjemahan aksara Bali dengan akurat.</string>
    <string name="about_apps_paragraph_2">Di era digital yang semakin maju, pelestarian budaya daerah menjadi hal yang patut dilestarikan dan diabadikan. Kaliatra hadir sebagai salah satu solusi untuk mendukung pelestarian tersebut dengan mengemas proses belajar aksara Bali dengan teknologi yang mutakhir. Aplikasi ini dapat membantu siapa saja dalam memahami dan mempelajari Aksara Bali, baik itu dari sisi pendidikan, pengembangan diri, ataupun wisatawan.</string>
    <string name="about_apps_paragraph_3">Dengan interface yang ramah pengguna, serta fitur translasi yang berbasis Machine Learning, Kaliatra memastikan Aksara Bali dapat diakses dengan mudah oleh generasi muda di masa mendatang. Harapannya, aplikasi ini dapat mendorong Aksara Bali agar tetap bertahan di tengah derasnya arus globalisasi.</string>
    <string name="select_language">Pilih Bahasa</string>
    <string name="subtitle_language_english">English</string>
    <string name="subtitle_language_indonesia">Indonesia</string>
    <string name="language_changed">Bahasa diatur ke %1$s</string>
    <string name="cancel">Cancel</string>
</resources>