<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutAppsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Montserrat.Bold"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="4dp"
            android:paddingBottom="16dp"
            android:text="@string/about_apps_paragraph_1"
            android:textAppearance="@style/TextAppearance.Montserrat.Regular"
            android:textSize="16sp"
            tools:targetApi="o" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="4dp"
            android:paddingBottom="16dp"
            android:text="@string/about_apps_paragraph_2"
            android:textAppearance="@style/TextAppearance.Montserrat.Regular"
            android:textSize="16sp"
            tools:targetApi="o" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="4dp"
            android:text="@string/about_apps_paragraph_3"
            android:textAppearance="@style/TextAppearance.Montserrat.Regular"
            android:textSize="16sp"
            tools:targetApi="o" />
    </LinearLayout>
</ScrollView>