<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/onBoardingFragment1">

    <fragment
        android:id="@+id/onBoardingFragment1"
        android:name="com.dicoding.kaliatra.ui.onboarding.OnBoardingFragment1"
        android:label="Onboarding 1"
        tools:layout="@layout/fragment_on_boarding1">
        <action
            android:id="@+id/action_onBoardingFragment1_to_onBoardingFragment2"
            app:destination="@id/onBoardingFragment2" />
        <action
            android:id="@+id/action_onBoardingFragment1_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/onBoardingFragment2"
        android:name="com.dicoding.kaliatra.ui.onboarding.OnBoardingFragment2"
        android:label="Onboarding 2"
        tools:layout="@layout/fragment_on_boarding2" >
        <action
            android:id="@+id/action_onBoardingFragment2_to_onBoardingFragment3"
            app:destination="@id/onBoardingFragment3" />
    </fragment>

    <fragment
        android:id="@+id/onBoardingFragment3"
        android:name="com.dicoding.kaliatra.ui.onboarding.OnBoardingFragment3"
        android:label="Onboarding 3"
        tools:layout="@layout/fragment_on_boarding3">
        <action
            android:id="@+id/action_onBoardingFragment3_to_onBoardingFragmentlogin"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.dicoding.kaliatra.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_onBoardingFragmentLogin_to_navigationHome"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.kaliatra.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.dicoding.kaliatra.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_dictionary"
        android:name="com.dicoding.kaliatra.ui.dictionary.DictionaryFragment"
        android:label="@string/title_dictionary"
        tools:layout="@layout/fragment_dictionary" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dicoding.kaliatra.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_result"
        android:name="com.dicoding.kaliatra.ui.result.ResultFragment"
        android:label="@string/result"
        tools:layout="@layout/fragment_result" />
</navigation>