<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.OnBoardingFragment1">

    <LinearLayout
        android:id="@+id/backgroundOnboarding"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:background="@drawable/rounded_blue"
        android:clipToOutline="true"
        android:clipToPadding="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="s">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="130dp"
            android:contentDescription="@string/img_onboarding_1"
            android:src="@drawable/img_onboarding_1" />
    </LinearLayout>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/title_text_onboarding_1"
        android:textAppearance="@style/TextAppearance.Montserrat.Bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundOnboarding" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/description_text_onboarding_1"
        android:textAppearance="@style/TextAppearance.Montserrat.Regular"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/buttonNavigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="13dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/circleOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/circle_one"
                android:src="@drawable/ic_circle_blue" />

            <ImageView
                android:id="@+id/circleTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/circleOne"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/circleOne"
                android:contentDescription="@string/circle_two"
                android:src="@drawable/ic_circle_white"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/circleThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/circleTwo"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/circleTwo"
                android:contentDescription="@string/circle_three"
                android:src="@drawable/ic_circle_white" />
        </RelativeLayout>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/ic_arrow_circle_right"
            android:contentDescription="@string/button_onboarding_next" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>